# hyde-ipc

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  config.go  dispatcher.go  executor.go  go.mod  go.sum  hyde-ipc  main.go  rust-toolchain.toml  rustfmt.toml  watcher.go
.github/workflows/: docs.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: dispatch.rs  flags.rs  keyword.rs  listen.rs  main.rs  parsers.rs  query.rs  react.rs  react_config.rs  reaction_handler.rs  setup.rs
cmd/hyde-ipc/: main.go
doc/: crates.js  search-index.js
doc/hyde_ipc/: all.html  macro.command.html  macro.dispatch.html  sidebar-items.js
doc/hyde_ipc/ctl/: sidebar-items.js  struct.Color.html
doc/hyde_ipc/data/: enum.BezierIdent.html  enum.TabletType.html  enum.Transforms.html  index.html  struct.Animations.html  struct.Bezier.html  struct.Binds.html  struct.Clients.html  struct.CursorPosition.html  struct.Devices.html  struct.FullscreenState.html  struct.LayerClient.html  struct.Monitor.html  struct.Mouse.html  struct.Tablet.html  struct.Version.html  struct.Workspace.html  struct.WorkspaceBasic.html
doc/hyde_ipc/dispatch/: enum.CycleDirection.html  enum.FullscreenType.html  enum.Position.html  enum.WindowIdentifier.html  enum.WindowSwitchDirection.html  enum.WorkspaceOptions.html  sidebar-items.js
doc/hyde_ipc/event_listener/: sidebar-items.js  struct.ChangedSpecialEventData.html  struct.EventListener.html  struct.EventStream.html  struct.MonitorEventData.html  struct.NonSpecialWorkspaceEventData.html  struct.State.html  struct.WindowMoveEvent.html  struct.WindowOpenEvent.html  struct.WindowTitleEventData.html
doc/hyde_ipc/keyword/: enum.OptionValue.html  struct.Keyword.html
doc/hyde_ipc/prelude/: macro.async_closure.html  trait.HyprDataActive.html
doc/hyde_ipc/shared/: enum.CommandFlag.html  enum.HyprError.html  enum.WorkspaceType.html  macro.command.html  sidebar-items.js  trait.HyprDataVec.html  type.MonitorId.html
doc/search.desc/hyde_ipc/: hyde_ipc-desc-0-.js
doc/src/hyde_ipc/: lib.rs.html
doc/type.impl/std/: primitive.i128.js
docs/: help.html  settings.html  src-files.js
docs/hyde_ipc/: index.html  macro.async_closure.html  macro.bind.html  type.Result.html
docs/hyde_ipc/config/: index.html  sidebar-items.js
docs/hyde_ipc/ctl/: index.html
docs/hyde_ipc/data/: enum.AnimationStyle.html  enum.FullscreenMode.html  enum.TabletBelongsTo.html  sidebar-items.js  struct.Animation.html  struct.Bind.html  struct.Client.html  (+7 more)
examples/: chained-dispatchers.toml
hyde-ipc-lib/: Cargo.toml
hyde-ipc-lib/src/: service.rs
hyprland-lib/: Cargo.toml  README.md
hyprland-lib/src/: config.rs  ctl.rs  dispatch.rs  keyword.rs  lib.rs  shared.rs  unsafe_impl.rs
hyprland-macros/src/: lib.rs
internal/config/: config.go  watcher.go
internal/events/: dispatcher.go
internal/executor/: executor.go
internal/utils/: utils.go
src/: lib.rs  main.rs
src/cli/: dispatch.rs  flags.rs  keyword.rs  listen.rs  mod.rs  react.rs  react_config.rs  setup.rs
(+100 files in other folders)
