[package]
name = "hyde-ipc"
edition = "2024"
readme = "README.md"
#####
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[workspace.package]
version = "0.0.1"
license = ""
repository = ""
keywords = []
categories = [""]


[workspace]
members = ["hyprland-macros", "hyprland-lib"]
# hyprland-macros :: hypland-lib


[dependencies]
hyprland = { path = "hyprland-lib" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[features]
default = ["hyprland/default"]
async-lite = ["hyprland/async-lite"]
async-std = ["hyprland/async-std"]
tokio = ["hyprland/tokio"]
dispatch = ["hyprland/dispatch"]
data = ["hyprland/data"]
ctl = ["hyprland/ctl"]
keyword = ["hyprland/keyword"]
config = ["hyprland/config"]
listener = ["hyprland/listener"]
parking_lot = ["hyprland/parking_lot"]
ahash = ["hyprland/ahash"]
unsafe-impl = ["hyprland/unsafe-impl"]


[profile.release]
opt-level = 3
strip = true
lto = true
