# [package]
# name = "hyde-ipc"

[workspace.package]
edition = "2024"
readme = "README.md"
authors = ["prime-run <prime-run@github.com>"]
version = "0.1.3"
license = "MIT"
repository = "https://github.com/HyDE-Project/hyde-ipc"
keywords = ["hyde", "hyde-ipc", "hyprland", "hyprland-ipc"]
categories = ["API bindings"]


[workspace]
members = ["hyprland-macros", "hyprland-lib", "cli", "hyde-ipc-lib"]
default-members = ["cli"]
resolver = "3"


[profile.release]
strip = true
lto = "fat"
# debug = 1
codegen-units = 1
overflow-checks = false
panic = "abort"
