[package]
name = "hyde-ipc"
rust-version = "1.87.0"

edition.workspace = true
readme.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
hyprland = { path = "../hyprland-lib" }
hyde-ipc-lib = { path = "../hyde-ipc-lib" }

